deploy: 3e214304855a2d53d3831ea262d97f66ce2c823d

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@ ul.task-list li input[type="checkbox"] {
   </li>  
   <li class="nav-item">
     <a class="nav-link" href="./projects.html" rel="" target="">
- <span class="menu-text">Streamlit App Embedded in Quarto</span></a>
+ <span class="menu-text">My Streamlit App</span></a>
   </li>  
 </ul>
             <div class="quarto-navbar-tools ms-auto">
