--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Faye Struble’s Portfolio - Streamlit App Embedded in Quarto</title>
+<title>Faye Struble’s Portfolio - My Streamlit App</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -90,7 +90,7 @@ ul.task-list li input[type="checkbox"] {
   </li>  
   <li class="nav-item">
     <a class="nav-link active" href="./projects.html" rel="" target="" aria-current="page">
- <span class="menu-text">Streamlit App Embedded in Quarto</span></a>
+ <span class="menu-text">My Streamlit App</span></a>
   </li>  
 </ul>
             <div class="quarto-navbar-tools ms-auto">
@@ -104,14 +104,20 @@ ul.task-list li input[type="checkbox"] {
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#my-streamlit-app" id="toc-my-streamlit-app" class="nav-link active" data-scroll-target="#my-streamlit-app">My Streamlit App</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Streamlit App Embedded in Quarto</h1>
+<h1 class="title">My Streamlit App</h1>
 </div>
 
 
@@ -126,10 +132,14 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<iframe src="https://ncga24.streamlit.app/" width="100%" height="600">
+<section id="my-streamlit-app" class="level2">
+<h2 class="anchored" data-anchor-id="my-streamlit-app">My Streamlit App</h2>
+<p>You can interact with the Streamlit app below:</p>
+<iframe src="https://ncga24.streamlit.app" width="100%" height="800px" frameborder="0">
 </iframe>
 
 
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
